--- a/formulaire_inscription-dist.html
+++ b/formulaire_inscription-dist.html
@@ -1,7 +1,8 @@
-<:form_forum_indiquer_nom_email:>
-<form method='post' action='#SELF' style='border: 0px; margin: 0px;'> 
-      <fieldset style="border: none; font-weight: bold">
-	<legend></legend>
+[
+(#HTTP_VARS{mode}|choixsiegal{forum,' ',''})<:pass_forum_bla:><br /><br />][
+(#HTTP_VARS{mode}|choixsiegal{redac,' ',''})<:pass_espace_prive_bla:><br /><br />]<:form_forum_indiquer_nom_email:>
+<form name="inscription" method='post' action='#SELF' style='border: 0px; margin: 0px;'> 
+      <fieldset style="border: none; font-weight: bold"><legend></legend>
 	<label>
 	  <:form_pet_votre_nom:>
 	  <input type="text" class="forml" name="nom_inscription" value="" size="30" />
@@ -11,6 +12,23 @@
 	  <input type="text" class="forml" name="mail_inscription" value="" size="30" />
 	</label>
       </fieldset>
-      <div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div> 
+      <div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" />
+	</div> 
 </form>
+<script type="text/javascript"><!--
+document.inscription.nom_inscription.focus()
+--></script>
+[<br />
+<div align="right">
+(#HTTP_VARS{mode}|choixsivide{'', ' '})
+<script type="text/javascript"><!--
+document.write("<a href='")
+document.write((window.opener) ? "javascript:close()" : "./")
+document.write("'><:pass_quitter_fenetre:><" + "/a>");
+//--></script>
+<noscript>
+	&#91;<a href='./'><:pass_retour_public:></a>&#93;
+</noscript>
+</div>
+]
 
