rationnalisation des focus et des attributs des formulaires

--- a/formulaire_inscription-dist.html
+++ b/formulaire_inscription-dist.html
@@ -14,11 +14,11 @@
       </fieldset>
       <div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" />
 	</div> 
-</form>
+</form>[
 <script type="text/javascript"><!--
-document.inscription.nom_inscription.focus()
+document.inscription.(#HTTP_VARS{focus}).focus()
 --></script>
-[<br />
+][<br />
 <div align="right">
 (#HTTP_VARS{mode}|choixsivide{'', ' '})
 <script type="text/javascript"><!--
