remplacement de name= par id= (focus et preferences au login pas toujours conformes)

--- a/formulaire_forum-dist.html
+++ b/formulaire_forum-dist.html
@@ -1,4 +1,4 @@
-<form action='[(#HTTP_VARS{url})]' method='post' name='formulaire'>
+<form action='[(#HTTP_VARS{url})]' method='post' id='formulaire'>
       <input type='hidden' name='ajout_forum' value="oui" />
       <input type='hidden' name='id_message' value="[(#HTTP_VARS{id_message})]" />
       <input type='hidden' name='alea' value="[(#HTTP_VARS{alea})]" />
