--- a/formulaire_inscription-dist.html
+++ b/formulaire_inscription-dist.html
@@ -1,7 +1,7 @@
 [
 (#HTTP_VARS{mode}|choixsiegal{forum,' ',''})<:pass_forum_bla:><br /><br />][
 (#HTTP_VARS{mode}|choixsiegal{redac,' ',''})<:pass_espace_prive_bla:><br /><br />]<:form_forum_indiquer_nom_email:>
-<form name="inscription" method='post' action='#SELF' style='border: 0px; margin: 0px;'> 
+<form id="inscription" method='post' action='#SELF' style='border: 0px; margin: 0px;'> 
       <fieldset style="border: none; font-weight: bold"><legend></legend>
 	<label>
 	  <:form_pet_votre_nom:>
