--- a/formulaire_oubli-dist.html
+++ b/formulaire_oubli-dist.html
@@ -1,4 +1,4 @@
-<form name="oubli_form" action='spip_pass.php3' method='post'>
+<form id="oubli_form" action='spip_pass.php3' method='post'>
 	<fieldset style="border: none;"><legend></legend>[
 	<:pass_nouveau_pass:>
 	<input type='hidden' name="p" value="(#HTTP_VARS{p})">
