--- a/formulaire_login-dist.html
+++ b/formulaire_login-dist.html
@@ -13,7 +13,7 @@ onclick="javascript:window.open(this.href, 'spip_inscription', 'scrollbars=yes, 
 		onclick="javascript:window.open(this.href, 'spip_pass', 'scrollbars=yes, resizable=yes, width=480, height=280'); return false;"><:login_motpasseoublie:></a>&#93;<br /><br />
 ]<div style="font-family: Verdana,arial,helvetica,sans-serif; font-size: 12px;">
 	<script type="text/javascript" src="ecrire/md5.js"></script>
-	<form	name="login[_(#HTTP_VARS{login})]"
+	<form	id="login[_(#HTTP_VARS{login})]"
 		action="[(#HTTP_VARS{action2})]"
 		method="post"[(#HTTP_VARS{source}|choixsiegal{spip,' ',''})
 		onSubmit='if (this.session_password.value) {
@@ -25,7 +25,7 @@ onclick="javascript:window.open(this.href, 'spip_inscription', 'scrollbars=yes, 
 			<div class="reponse_formulaire">(#HTTP_VARS*{erreur})<br /><br /></div>
 ][
 			<label><b><:login_login2:></b><br /></label>(#HTTP_VARS{login}|choixsivide{' ',''})
-			<input type="text" name="var_login" class="forml" value="" size="40" />
+			<input type="text" id='var_login' name="var_login" class="forml" value="" size="40" />
 ][
 <div>
 			<input type="hidden" name="session_login_hidden" value="(#HTTP_VARS{login})" />
@@ -42,23 +42,25 @@ document.write("<:login_login:>&nbsp;<b>[(#HTTP_VARS{login})]<" + "/b><br />&#91
 	<input type='text' name='session_login' class='forml' [value="(#HTTP_VARS{login})" ]size='40' />
 </noscript>
 [<img src="(#HTTP_VARS{id_auteur}|silogoauteur)" width="75" align="right" alt="[(#HTTP_VARS{login})]">]
-</div><p><br /><br />
-		<label><b><:login_pass2:></b></label>&nbsp;<input type="password" name="session_password" class="forml" value="" size="40" />
-		<input type="hidden" name="essai_login" value="oui" />
+</div>
+<p><br /><br />
+		<label><b><:login_pass2:></b></label>&nbsp;<input type="password" name="session_password"[ id="var_login_(#HTTP_VARS{login})]" class="forml" value="" size="40" />
 		<br />&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox"
 			 name="session_remember"
 			 id="session[_(#HTTP_VARS{login})]"
-			 value="oui"[(#HTTP_VARS{prefs}|filtre_rester_connecte)]/>
+			 value="oui"[(#HTTP_VARS*{prefs}|filtre_rester_connecte)checked="checked"]/>
 		<label for="session[_(#HTTP_VARS{login})]"><:login_rester_identifie:></label>
+</p>
 		<input type="hidden" name="session_password_md5" value="" />
 		<input type="hidden" name="next_session_password_md5" value="" />
-</p>]		<input type="hidden" name="url" value="[(#HTTP_VARS{url})]" />
+		<input type="hidden" name="essai_login" value="oui" />
+]		<input type="hidden" name="url" value="[(#HTTP_VARS{url})]" />
 		<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div>
 		</div>
 	</form>
-[<script type="text/javascript"><!--
-document.login(#HTTP_VARS{login}|choisir_noeud{session_password,var_login}).focus()
---></script>][
+<script type="text/javascript"><!--
+document.getElementById('var_login[_(#HTTP_VARS{login})]').focus()
+--></script>[
 	<form action="(#HTTP_VARS{auth})" method="get">
 		<fieldset>
 		<p>
