--- a/formulaire_signature-dist.html
+++ b/formulaire_signature-dist.html
@@ -28,7 +28,7 @@
 	  </label>
 	</fieldset>[
 	<br />
-	<fieldset style='font-weigth: bold'>
+	<fieldset style='font-weight: bold'>
 	  <legend></legend>
 	(#HTTP_VARS{message}|choixsiegal{oui,' ', ''})
 	  <label>
