--- a/formulaire_recherche-dist.html
+++ b/formulaire_recherche-dist.html
@@ -1,8 +1,9 @@
 <form action='[(#HTTP_VARS{lien})]' method='get' class='formrecherche'>
-	<input	type='text'
-		id='formulaire_recherche'
-		size='20'
-		class='formrecherche'
-		name='recherche'
-		value="[(#HTTP_VARS{recherche})]" />
+	<div>
+		<input	type='text'
+			id='formulaire_recherche'
+			class='formrecherche'
+			name='recherche'
+			value="[(#HTTP_VARS{recherche})]" />
+	</div>
 </form>
