--- a/login-dist.html
+++ b/login-dist.html
@@ -15,8 +15,8 @@
 </div>
 #LOGIN_PRIVE
 	<div align="center">[&#91;<a
+		href='(#URL_SITE_SPIP|inscriptionok{redac})/spip_inscription.php3?mode=redac&amp;focus=nom_inscription&amp;target=spip_pass'
 		target="spip_pass"
-		href='(#URL_SITE_SPIP|inscriptionok{redac})/spip_inscription.php3?mode=redac&focus=nom_inscription'
 		onclick="javascript:window.open(this.href, 'spip_pass', 'scrollbars=yes, resizable=yes, width=480, height=500'); return false;"><:login_sinscrire:></a>&#93;]&#91;<a
 		href="spip_pass.php3"
 		target="spip_pass" 
