--- a/formulaire_inscription-dist.html
+++ b/formulaire_inscription-dist.html
@@ -1,11 +1,11 @@
 [
 (#HTTP_VARS*{message})
 ][
-(#HTTP_VARS*{message}|?{'':' '})[
- (#HTTP_VARS{mode}|=={forum}|?{' ':''})
+(#HTTP_VARS*{message}|?{'',' '})[
+ (#HTTP_VARS{mode}|=={forum}|?{' ',''})
 	<:pass_forum_bla:><br /><br />
 ][
- (#HTTP_VARS{mode}|=={redac}|?{' ':''})
+ (#HTTP_VARS{mode}|=={redac}|?{' ',''})
 	<:pass_espace_prive_bla:><br /><br />
 ]<:form_forum_indiquer_nom_email:>
  <form	id="inscription" method='post' action='#SELF'
@@ -29,7 +29,7 @@ document.inscription.(#HTTP_VARS{focus}).focus()
  ]
 ][<br />
 <div align="right">
-(#HTTP_VARS{target}|?{' ':''})
+(#HTTP_VARS{target}|?{' ',''})
 <script type="text/javascript"><!--
 document.write("<a href='")
 document.write((window.opener) ? "javascript:close()" : "./")
