--- a/formulaire_oubli-dist.html
+++ b/formulaire_oubli-dist.html
@@ -1,7 +1,7 @@
 [
 (#HTTP_VARS*{message})
 ][
-(#HTTP_VARS*{message}|?{'':' '})
+(#HTTP_VARS*{message}|?{'',' '})
 <form id="oubli_form" action='spip_pass.php3' method='post'>
 	<fieldset style="border: none;"><legend></legend>[
 	<:pass_nouveau_pass:>
@@ -10,7 +10,7 @@
 	    <:pass_choix_pass:>
 	    <input type="password" name="oubli">
 	</label>][
-	(#HTTP_VARS{p}|?{'':' '})
+	(#HTTP_VARS{p}|?{'',' '})
 	<label>
 	  <:pass_indiquez_cidessous:>
 	  <input type="texte" name="oubli">
@@ -23,7 +23,7 @@
 <div align="right">
 <script type="text/javascript"><!--
 [
-(#HTTP_VARS*{message}|?{'':' '})
+(#HTTP_VARS*{message}|?{'',' '})
 document.oubli_form.oubli.focus()
 ]
 document.write("<a href='")
