--- a/formulaire_forum-dist.html
+++ b/formulaire_forum-dist.html
@@ -1,57 +1,57 @@
-<form action='[(#HTTP_VARS{url})]' method='post' name='formulaire'>
+<form action="[(#HTTP_VARS{url})]" method="post" name="formulaire">
 
-<input type='hidden' name='ajout_forum' value="oui" />
-<input type='hidden' name='alea' value="[(#HTTP_VARS{alea})]" />
-<input type='hidden' name='hash' value="[(#HTTP_VARS{hash})]" />
-<input type='hidden' name='retour' value="[(#HTTP_VARS{retour})]" />
+<input type="hidden" name="ajout_forum" value="oui" />
+[<input type="hidden" name="alea" value="(#HTTP_VARS{alea})" />]
+[<input type="hidden" name="hash" value="(#HTTP_VARS{hash})" />]
+[<input type="hidden" name="retour" value="(#HTTP_VARS{retour})" />]
 
 [<p>(#HTTP_VARS*{modere})</p>]
 
 [(#HTTP_VARS*{afficher_texte_hidden})]
 [(#HTTP_VARS*{afficher_texte_input})
 	[(#HTTP_VARS*{previsu})
-		<fieldset class='spip_encadrer'>
+		<fieldset class="spip_encadrer">
 		<legend><b><:forum_titre:></b></legend>
-		<label><input type='text' name='titre' 
-			[value="(#HTTP_VARS{titre})" ]class='forml' size='40' />
+		<label><input type="text" name="titre" 
+			[value="(#HTTP_VARS{titre})" ]class="forml" size="40" />
 		</label>
 		</fieldset>
 		<br />
-		<fieldset class='spip_encadrer'>
+		<fieldset class="spip_encadrer">
 		<legend><b><:forum_texte:></b></legend>
 		<p><:info_creation_paragraphe:></p>
 		[(#HTTP_VARS{texte}|barre_forum)]
 		</fieldset>
 		<br />
 		[<p>(#HTTP_VARS*{table})</p>]
-		<fieldset class='spip_encadrer'>
+		<fieldset class="spip_encadrer">
 			<legend><:forum_lien_hyper:></legend>
 			<p><:forum_page_url:></p>
 			<p><label><:forum_titre:>
-				<input type='text' name='nom_site_forum' class='forml' size='40'
+				<input type="text" name="nom_site_forum" class="forml" size="40"
 					value="[(#HTTP_VARS{nom_site_forum})]" />
 			</label></p>
 			<p><label><:forum_url:>
-			<input type='text' name='url_site' class='forml' size='40'
+			<input type="text" name="url_site" class="forml" size="40"
 				value="[(#HTTP_VARS{url_site})]" />
 			</label></p>
 		</fieldset>
 		<br />
-		<fieldset class='spip_encadrer'>
+		<fieldset class="spip_encadrer">
 			<legend><:forum_qui_etes_vous:></legend>
 			<p><label><:forum_votre_nom:>
-				<input type='text' name='auteur' value="[(#HTTP_VARS{auteur})]"
-					class='forml' size='40' [(#HTTP_VARS{disabled})] />
+				<input type="text" name="auteur" value="[(#HTTP_VARS{auteur})]"
+					class="forml" size="40" [(#HTTP_VARS{disabled})] />
 			</label></p>
 			<p><label><:forum_votre_email:>
-				<input type='text' name='email_auteur'
+				<input type="text" name="email_auteur"
 				value="[(#HTTP_VARS{email_auteur})]"
-				class='forml' size='40' [(#HTTP_VARS{disabled})] />
+				class="forml" size="40" [(#HTTP_VARS{disabled})] />
 			</label></p>
 		</fieldset>
 		<br />
-		<div align='right'><input type='submit' value="<:forum_voir_avant:>"
-		class='spip_bouton'></div>
+		<div align="#LANG_RIGHT"><input type="submit" value="<:forum_voir_avant:>"
+		class="spip_bouton"></div>
 	]
 ]
 </form>
