squelettisation des liens du panneau de login

--- a/formulaire_login-dist.html
+++ b/formulaire_login-dist.html
@@ -63,7 +63,7 @@ document.write("<:login_login:>&nbsp;<b>[(#HTTP_VARS{login})]<" + "/b><br />&#91
 		</div>
 	</form>
 <script type="text/javascript"><!--
-document.getElementById('var_login[_(#HTTP_VARS{login})]').focus()
+document.getElementById('var_login[_(#HTTP_VARS{login})]').focus();
 --></script>[
 	<form action="(#HTTP_VARS{auth})" method="get">
 		<fieldset>
