--- a/login-dist.html
+++ b/login-dist.html
@@ -13,16 +13,10 @@
 <small><:login_acces_prive:></small></h3>
 <div align="#LANG_RIGHT">#MENU_LANG_ECRIRE</div>
 </div>
+
 #LOGIN_PRIVE
-	<div align="center">[&#91;<a
-		href='(#URL_SITE_SPIP|inscriptionok{redac})/spip_inscription.php3?mode=redac&amp;focus=nom_inscription&amp;target=spip_pass'
-		target="spip_pass"
-		onclick="javascript:window.open(this.href, 'spip_pass', 'scrollbars=yes, resizable=yes, width=480, height=500'); return false;"><:login_sinscrire:></a>&#93;]&#91;<a
-		href="spip_pass.php3"
-		target="spip_pass" 
-		onclick="javascript:window.open(this.href, 'spip_pass', 'scrollbars=yes, resizable=yes, width=480, height=280'); return false;"><:login_motpasseoublie:></a>&#93;&#91;<a 
-		href='#URL_SITE_SPIP'><:login_retoursitepublic:></a>&#93
-	      </div>
+
+#LOGIN_LIENS
 
 </td></tr></table></center>
 
