internationalisation du debugueur (et autres petits oublis)

--- a/formulaire_admin-dist.html
+++ b/formulaire_admin-dist.html
@@ -9,7 +9,7 @@
 	<li><a href='ecrire/auteurs_edit.php3?id_auteur=(#HTTP_VARS{id_auteur})' class='spip-admin-boutons'><:admin_modifier_auteur:> ([(#HTTP_VARS{id_auteur})])</a></li>]
 	<li><a href='[(#HTTP_VARS{action})]var_mode=recalcul' class='spip-admin-boutons'><:admin_recalculer:>[(#HTTP_VARS{use_cache})]</a></li>[
 	<li><a href='ecrire/(#HTTP_VARS{statistiques})[id_article=(#HTTP_VARS{id_article})]' class='spip-admin-boutons'><:info_visites:>&nbsp;[(#HTTP_VARS{visites})];&nbsp;<:info_popularite_5:>&nbsp;[(#HTTP_VARS{popularite})]</a></li>][
-	<li><a href='[(#HTTP_VARS{action})]var_mode=(#HTTP_VARS{debug})' class='spip-admin-boutons'>Debug</a></li>]
+	<li><a href='[(#HTTP_VARS{action})]var_mode=(#HTTP_VARS{debug})' class='spip-admin-boutons'><:admin_debug:></a></li>]
 	</ul>
 </div>
 </div>
