caractères des liens de login

--- a/login-dist.html
+++ b/login-dist.html
@@ -16,7 +16,9 @@
 
 #LOGIN_PRIVE
 
-<div align='center'>#LOGIN_LIENS</div>
+<div align='center' style='font-family: Verdana,arial,helvetica,sans-serif; font-size: 12px;'>
+#LOGIN_LIENS
+</div>
 
 </td></tr></table></center>
 
