gestion du nouveau module de langue 'ecrire'
corrections dans le FORMULAIRE_RECHERCHE et FORMULAIRE_ADMIN

sécurité

--- a/formulaire_admin-dist.html
+++ b/formulaire_admin-dist.html
@@ -1,4 +1,4 @@
-<div class="spip-admin-float">
+[<(#HTTP_VARS{floatdiv}) class="spip-admin-float">]
 <div class="spip-admin-bloc" dir='#LANG_DIR'>
 <div class="spip-admin">
 	<ul>[
@@ -13,4 +13,4 @@
 	</ul>
 </div>
 </div>
-</div>
+[</(#HTTP_VARS{floatdiv})>]
