--- a/nouveautes-dist.html
+++ b/nouveautes-dist.html
@@ -4,7 +4,7 @@
 <:bonjour|texte_script:>
 
 <:texte_lettre_information|texte_script:> "[(#NOM_SITE_SPIP|textebrut|texte_script)]" (#URL_SITE_SPIP).
-<:texte_lettre_information_2|texte_script:> [(#HTTP_VARS{jours_neuf})] <:jours|texte_script:>.
+<:texte_lettre_information_2|texte_script:> [(#ENV{jours_neuf})] <:jours|texte_script:>.
 
 <BOUCLE0(AUTEURS){0,1}><B_nv1>
           <:nouveaux_articles|texte_script:>
