--- a/formulaire_ecrire_auteur-dist.html
+++ b/formulaire_ecrire_auteur-dist.html
@@ -1,20 +1,20 @@
-[<br /><img src='puce(#HTTP_VARS{sujetko}).gif' border='0' alt='-' /> <:form_prop_indiquer_sujet:><br />&nbsp;][
-<br /><img src='puce(#HTTP_VARS{mailko}).gif' border='0' alt='-' /> <:form_prop_indiquer_email:><br /><br />
-]<form action="[(#HTTP_VARS{action})]" method='post'>
+[<br /><img src='puce(#ENV{sujetko}).gif' border='0' alt='-' /> <:form_prop_indiquer_sujet:><br />&nbsp;][
+<br /><img src='puce(#ENV{mailko}).gif' border='0' alt='-' /> <:form_prop_indiquer_email:><br /><br />
+]<form action="[(#ENV{action})]" method='post'>
 <p><label><:form_pet_votre_email:>
 	<input type="text" class="forml" name="email_message_auteur"
-		 value="[(#HTTP_VARS{mail})]" size="30" />
+		 value="[(#ENV{mail})]" size="30" />
 </label></p>
 <p><label><:form_prop_sujet:><br />
 	<input type="text" class="forml" name="sujet_message_auteur"
-		 value="[(#HTTP_VARS{sujet})]" size="30" />
+		 value="[(#ENV{sujet})]" size="30" />
 </label></p>
 <p>
-<textarea name='texte_message_auteur' rows='10' class='forml' cols='40'>[(#HTTP_VARS{texte})]</textarea>
+<textarea name='texte_message_auteur' rows='10' class='forml' cols='40'>[(#ENV{texte})]</textarea>
 </p>
-[<input type="hidden" name="id_auteur" value="(#HTTP_VARS{id_auteur})" />]
+[<input type="hidden" name="id_auteur" value="(#ENV{id_auteur})" />]
 <div align="right">
 	<input type="submit"  class="spip_bouton" name="valide"
-		 value="[(#HTTP_VARS{valide})]" />
+		 value="[(#ENV{valide})]" />
 </div>
 </form>
