--- a/formulaire_signature-dist.html
+++ b/formulaire_signature-dist.html
@@ -1,8 +1,8 @@
 <form method='post'
-      action='#SELF#sp[(#HTTP_VARS{id_article})]' >
+      action='#SELF#sp[(#ENV{id_article})]' >
       <input type="hidden" name="url_page" value="#URL_SITE_SPIP/#SELF">
       <div class='spip_encadrer' style='color: black; font-size: 80%; font-weight: normal;'>
-	[(#HTTP_VARS*{texte}|propre)]
+	[(#ENV*{texte}|propre)]
 	<fieldset style='font-size: 110%; font-weight: bold;'>
 	  <legend></legend>
 	  <label>
@@ -15,7 +15,7 @@
 	  </label>
 	</fieldset>
 	<br />
-	<p>[(#HTTP_VARS{site_obli}|=={oui}|?{'',' '})<:form_pet_votre_site:><br />]
+	<p>[(#ENV{site_obli}|=={oui}|?{'',' '})<:form_pet_votre_site:><br />]
 	<fieldset style='font-size: 110%; font-weight: bold;'>
 	  <legend></legend>
 	  <label>
@@ -30,7 +30,7 @@
 	<br />
 	<fieldset style='font-weight: bold'>
 	  <legend></legend>
-	(#HTTP_VARS{message}|=={oui}|?{' ',''})
+	(#ENV{message}|=={oui}|?{' ',''})
 	  <label>
 	  <:form_pet_message_commentaire:><br />
 	    <textarea name="message" rows="3" class="forml" cols="20"></textarea>
