grosse série de modifs : http://thread.gmane.org/gmane.comp.web.spip.devel/24787
#LOGIN, séparation dans les balises dynamiques de contexte et _request()

possibilité d'utiliser plusieurs FORMULAIRE_ECRIRE_AUTEUR sur une seule page, activation du FORMULAIRE_ECRIRE_AUTEUR dans un contexte d'article (écrit à tous les auteurs) ; petites debug ; invalideurs pétitions ; creation d'un login plus sympa pour les inscriptions automatiques (on se base sur le nom plutôt que sur le login) ; previsu sous forme de squelette, etc....

--- a/formulaires/formulaire_ecrire_auteur.html
+++ b/formulaires/formulaire_ecrire_auteur.html
@@ -2,19 +2,18 @@
 <br />(#ENV*{mailko})<:form_prop_indiquer_email:><br /><br />
 ]<form action="[(#ENV{action})]" method='post'>
 <p><label><:form_pet_votre_email:>
-	<input type="text" class="forml" name="email_message_auteur"
-		 value="[(#ENV{mail})]" size="30" />
+<input type="text" class="forml" name="email_message_auteur[(#ENV{id})]"
+	value="[(#ENV{mail})]" size="30" />
 </label></p>
 <p><label><:form_prop_sujet:><br />
-	<input type="text" class="forml" name="sujet_message_auteur"
-		 value="[(#ENV{sujet})]" size="30" />
+<input type="text" class="forml" name="sujet_message_auteur[(#ENV{id})]"
+	value="[(#ENV{sujet})]" size="30" />
 </label></p>
 <p>
-<textarea name='texte_message_auteur' rows='10' class='forml' cols='40'>[(#ENV{texte})]</textarea>
+<textarea name="texte_message_auteur[(#ENV{id})]" rows='10' class='forml' cols='40'>[(#ENV{texte})]</textarea>
 </p>
-[<input type="hidden" name="id_auteur" value="(#ENV{id_auteur})" />]
 <div align="right">
-	<input type="submit"  class="spip_bouton" name="valide"
+	<input type="submit"  class="spip_bouton" name="valide[(#ENV{id})]"
 		 value="[(#ENV{valide})]" />
 </div>
 </form>
