--- a/formulaires/formulaire_ecrire_auteur.html
+++ b/formulaires/formulaire_ecrire_auteur.html
@@ -1,6 +1,7 @@
 [<br />(#ENV*{sujetko})<:form_prop_indiquer_sujet:><br />&nbsp;][
 <br />(#ENV*{mailko})<:form_prop_indiquer_email:><br /><br />
-]<form action="[(#ENV{action})]" method='post'>
+]<form action="[(#ENV{action})]" method='post'>[
+<input type="hidden" name="id_formulaire_ecrire_auteur" value="(#ENV{valide})" />]
 <p><label><:form_pet_votre_email:>
 <input type="text" class="forml" name="email_message_auteur[(#ENV{id})]"
 	value="[(#ENV{mail})]" size="30" />
@@ -13,7 +14,7 @@
 <textarea name="texte_message_auteur[(#ENV{id})]" rows='10' class='forml' cols='40'>[(#ENV{texte})]</textarea>
 </p>
 <div align="right">
-	<input type="submit"  class="spip_bouton" name="valide[(#ENV{id})]"
-		 value="[(#ENV{valide})]" />
+	<input type="submit"  class="spip_bouton" name="valide"
+		 value="[(#ENV{bouton})]" />
 </div>
 </form>
