je continue dans les commit excédentaires; cette fois je fais gaffe: les *login* c'est pour un petit coup de validation

--- a/formulaires/formulaire_login.html
+++ b/formulaires/formulaire_login.html
@@ -37,7 +37,7 @@ document.write("<:login_login:>&nbsp;<b>[(#ENV{login})]<" + "/b><br />&#91;<a hr
 	width="75"
 	valign="top"
 	align="right"
-	alt="[(#ENV{login})]"><br /><br /><br />]
+	alt="[(#ENV{login})]" /><br /><br /><br />]
 </div>
 <p>
 		<label><b><:login_pass2:></b></label>&nbsp;<input type="password" name="session_password"[ id="var_login_(#ENV{login})]" class="forml" value="" size="40" />
