un saut de ligne manquant pour les pétitions (Jacques)
-ça debuggue à donf sur #spip

--- a/formulaires/formulaire_signature.html
+++ b/formulaires/formulaire_signature.html
@@ -8,7 +8,7 @@
 		<:form_pet_votre_nom:>
 		<input type="text" class="forml" name="nom_email"
 		value="" size="20" />
-	</label>
+	</label><br />
 	<label>
 		<:form_pet_votre_email:><br />
 		<input type="text" class="forml" name="adresse_email"
